# mokaid

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
apps/ai-worker/: .env.example  pyproject.toml  requirements.txt
apps/ai-worker/app/: config.py  llm.py  main.py  schemas.py
apps/ai-worker/app/agents/: acknowledge.py  colleagues.py  deep_runner.py  direct_chat.py  mission_kind.py  planner.py  runner.py
apps/ai-worker/app/clients/: phoenix.py
apps/ai-worker/app/mcp/: client.py
apps/ai-worker/app/memory/: graph_extract.py  ingestion.py
apps/ai-worker/app/policies/: approval.py
apps/ai-worker/app/queue/: consumer.py
apps/ai-worker/app/tools/: files.py  registry.py  website.py
apps/ai-worker/tests/: conftest.py  test_direct_chat.py  test_files.py  test_graph_extract.py  test_ingestion.py  test_mcp.py  test_policies.py  test_runner.py
apps/api/: .env.example  .formatter.exs  mix.exs
apps/web/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  (+1 more)
docs/: AI_WORKERS.md  API.md  ARCHITECTURE.md  ASSETS_3D.md  AWS_INFRASTRUCTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  PERFORMANCE.md  REALTIME.md  SECURITY.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
scripts/: bake-avatar-animations.py  bake-avatar-female.py  bake-avatar-finance.py  dump_blender_lights.py  dump_blender_nav.py  gen_office_obstacles.py  generate-asset-manifest.ts  optimize-assets.sh  retarget-mixamo-walk-to-male.py  validate-gltf.sh
(+311 files in other folders)
