[project]
name = "mokaid-ai-worker"
version = "0.1.0"
description = "mokaid AI worker — LangGraph agent execution with human-in-the-loop approvals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1.50",
    "anthropic>=0.69",
    "boto3>=1.35",
    "structlog>=24.4",
    "mcp>=1.9",
    "Pillow>=10.0",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/agents/planner.py" = ["E501"]
"app/tools/files.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
